title case city, sets date to Today when no date, prevents dupe town + date in local storage and uses unshift rather than .push for local storage object

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,10 +86,12 @@ h3 {
 
 .sunTrack-header {
   /* background-color: var(--SunYellow); */
-  background-image: linear-gradient(43deg,
-      #ee3124 0%,
-      #ffcb47 46%,
-      #584c22 100%);
+  background-image: linear-gradient(
+    43deg,
+    #ee3124 0%,
+    #ffcb47 46%,
+    #584c22 100%
+  );
 
   /* sets properties for entire header */
   height: 13vh;
@@ -210,7 +212,6 @@ the elements in the center and creates gap between */
   color: #000000 !important;
 }
 
-
 /*----------------------------------------------
       ------------------------------------------------
       6. Buttons & Search Form
@@ -244,7 +245,6 @@ footer {
   border: 0;
 }
 
-
 .modal-content {
   background-color: #f5f5f5;
   border-radius: 12px;
@@ -275,7 +275,6 @@ footer {
   .input-container {
     /* flex-direction: column; */
     gap: 1vh;
-
   }
 }
 
@@ -301,7 +300,6 @@ footer {
 
 /* sets media query on search input, datepicker and search button for everything under 650px */
 @media only screen and (max-width: 650px) {
-
   #search-input,
   #datepicker {
     height: 30px;
